Resource Usage Predictor, Workflow Editor and Portal (GUI)

--- a/TANDEM System Manager/TANDEM Portal/src/main/webapp/applications.html
+++ b/TANDEM System Manager/TANDEM Portal/src/main/webapp/applications.html
@@ -51,7 +51,7 @@
 <!-- TABLE ------------------------------------------------------------------------>
   </div>
 <script type="text/javascript" src="js/applications.js"></script>
-
+<script type="text/javascript" src="js/runApplication.js"></script>
 <script>
     getjsoninfo();
 </script>
