--- a/TANDEM System Manager/TANDEM Portal/src/main/webapp/index.html
+++ b/TANDEM System Manager/TANDEM Portal/src/main/webapp/index.html
@@ -52,7 +52,7 @@
         <li>The <b>TANDEM System Administrator</b>, in order to manage and monitor the resource and devices usage and the services operation in all TANDEM​ nodes.</li>
     </ul>
     <p class="introtext" style="border-style:none">This work has been implemented in the context of the <b>Function and Device as a Service Support for Edge Computing (TANDEM)</b> Project.</p>
-    <input id="moreButton" type="button" value="Find out more" onclick="window.location.href='http://localhost:8080/tandem/en/home/'">
+    <input id="moreButton" type="button" value="Find out more" onclick="window.location.href='http://146.124.114.146:8000/tandem/en/home/'">
 </div>
 <p class="introtext" style="border-style:none; font-size: 12px; text-align: center;">
     <i>This project is co‐financed by the European Regional Development Fund of the European Union and Greek national funds through the Operational Program Competitiveness, Entrepreneurship and Innovation, under the call RESEARCH – CREATE – INNOVATE (project code: T2ΕΔΚ-02825)</i>
